<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_new_config"
            app:navigationIcon="@drawable/ic_action_back"
            app:title="@string/edit_config" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_name" />

            <EditText
                android:id="@+id/et_server_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_name_example"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16sp"
                android:text="@string/server_addr" />

            <EditText
                android:id="@+id/et_server_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_addr_example"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16sp"
                android:text="@string/server_port"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/et_server_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_port_example"
                android:inputType="number"
                android:singleLine="true"
                android:tag="@string/server_port" />

            <Switch
                android:id="@+id/sw_encryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:showText="false"
                android:text="@string/enable_encryption"
                android:textAlignment="viewStart"
                android:textOff="@string/encryption_disabled"
                android:textOn="@string/encryption_enabled" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16sp"
                android:text="@string/encryption" />

            <EditText
                android:id="@+id/et_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uuid_hint"
                android:inputType="text"
                android:singleLine="true"
                android:tag="@string/server_port" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>