<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_top_bar"
            app:title="New Config" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_name" />

        <EditText
            android:id="@+id/et_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_name_example"
            android:inputType="text"
            android:text="VPN" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_addr" />

        <EditText
            android:id="@+id/et_server_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_addr_example"
            android:inputType="text"
            android:text="240e:360:6f0b:6a00:1e77:2bd4:d4f3:c695" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/et_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_port_example"
            android:inputType="number"
            android:tag="@string/server_port"
            android:text="5555" />
    </LinearLayout>
</LinearLayout>